Introduce a new histogram: SB2.NoUserActionResourceLoadingDelay

It reports the total delay, in milliseconds, caused by SafeBrowsing for a
resource load, if the SafeBrowsing interstitial page is not showed and therefore
no user action is involved. At most one value is reported for each resource
load. If SafeBrowsing causes delays at different stages of a load, the sum of
all the delays will be reported.

BUG=782418

Change-Id: Ie467d181c4f535dbb4e5fcc67a8e23c284a4b4f7