components/safe_browsing/common/utils.cc
@@ -27,4 +27,8 @@ void LogDelay(base::TimeDelta time) {
   UMA_HISTOGRAM_LONG_TIMES("SB2.Delay", time);
 }
 
+void LogNoUserActionResourceLoadingDelay(base::TimeDelta time) {
+  UMA_HISTOGRAM_LONG_TIMES("SB2.NoUserActionResourceLoadingDelay", time);
+}
+
 }  // namespace safe_browsing
